gcc/testsuite/rust/rustc/ui/linkage-attr/linkage4.rs
#[linkage = "external"]
static foo: isize = 0;
// { dg-error ".E0658." "" { target *-*-* } .-2 }

fn main() {}

